@@ -3,6 +3,7 @@ Revision history for perl distribution Convos
 8.04 Not Released
  - Leaving a conversation will take you to the previous onc
    (Max 10 items in the history)
+ - Fix not fetching channel mode if conversation is frozen
 
 8.03 2023-10-31T08:39:00+0900
  - Bumped dependencies
